# trendforge-output

./: README.md
2026-06-27-loopwatch/: CONTRIBUTING.md  README.md  package.json
2026-06-27-loopwatch/examples/: basic-usage.ts
2026-06-27-loopwatch/src/: types.ts
2026-06-27-loopwatch/tests/: core.test.ts  rules.test.ts
2026-06-28-gitmind/: CONTRIBUTING.md  Cargo.toml  README.md
2026-06-28-gitmind/.github/workflows/: ci.yml
2026-06-28-gitmind/examples/: basic_example.rs
2026-06-28-gitmind/src/: collab.rs  engine.rs  mcp.rs  skill_registry.rs  store.rs
2026-06-28-gitmind/tests/: engine_test.rs  store_test.rs
2026-06-29-codelink-pilot/: CONTRIBUTING.md  README.md  package.json
2026-06-29-codelink-pilot/examples/: basic-demo.ts
2026-06-29-codelink-pilot/src/: types.ts
2026-06-29-codelink-pilot/tests/: agentAdapter.test.ts
2026-06-30-gemini-bridge/: CONTRIBUTING.md  README.md  package.json
2026-06-30-gemini-bridge/examples/: basic.ts
2026-06-30-gemini-bridge/src/: router.ts  server.ts  types.ts
2026-06-30-gemini-bridge/test/: adapter.test.ts  router.test.ts
2026-07-01-cogni-tune/: CONTRIBUTING.md  Cargo.toml  README.md
2026-07-01-cogni-tune/.github/workflows/: ci.yml
2026-07-01-cogni-tune/examples/: basic.rs
2026-07-01-cogni-tune/src/: engine.rs
2026-07-01-cogni-tune/src/auth/: middleware.rs
2026-07-01-cogni-tune/src/mcp/: server.rs
2026-07-01-cogni-tune/src/services/: config_store.rs  telemetry.rs
2026-07-01-cogni-tune/tests/: config_store_test.rs  telemetry_test.rs
2026-07-02-session-scribe/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-02-session-scribe/examples/: example_usage.py
2026-07-02-session-scribe/tests/: test_engine.py
2026-07-03-brew-ops-dashboard/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-03-brew-ops-dashboard/examples/: run_demo.py
2026-07-04-pipeline-pilot/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-05-chainforge/: CONTRIBUTING.md  README.md  package.json
2026-07-06-ai-quant-assembler/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-07-codeguardian/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-08-ai-hub-scanner/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-09-ai-devbox-orchestrator/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-10-labbench-cli/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-11-flowbridge/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-12-gputide/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-13-guizang-visualizer/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-14-graph-archiver-middleware/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-15-huntforge/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-16-trustguard-code/: CONTRIBUTING.md  README.md  package.json
2026-07-17-dnswatch/: CONTRIBUTING.md  Cargo.toml  README.md
2026-07-17-dnswatch/.github/workflows/: ci.yml
2026-07-17-dnswatch/cmd/: dnswatch.rs
2026-07-17-dnswatch/examples/: basic.rs
2026-07-17-dnswatch/src/: app_state.rs  engine.rs  metrics.rs  probe.rs  ui.rs
2026-07-17-dnswatch/tests/: engine_test.rs
2026-07-18-polytag/: CONTRIBUTING.md  README.md  package.json
2026-07-19-vid2prompt/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-20-agent-fabric/: CONTRIBUTING.md  LICENSE  README.md  package.json
2026-07-21-prismatica-relay/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-22-cloudguard/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-23-llm-configurator/: CONTRIBUTING.md  README.md  requirements.txt
2026-07-24-prompt-lab/: CONTRIBUTING.md  README.md  package.json
(+220 files in other folders)
