[package]
name = "cogni-tune"
version = "0.1.0"
edition = "2021"
description = "AI-driven cloud-config optimizer that turns raw telemetry into self-healing configuration proposals"
repository = "https://github.com/asmit25805/cogni-tune"
homepage = "https://github.com/asmit25805/cogni-tune"
readme = "README.md"
keywords = ["ai", "cloud", "configuration", "telemetry", "llm"]
categories = ["asynchronous", "network-programming", "web-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
clickhouse = { version = "0.9", default-features = false, features = ["tokio"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
hyper = { version = "1.2", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
assert_json_diff = "2.0"
mockall = "0.12"

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]